// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots Report renders the report 1`] = `
<span>
  <li
    className="sc-bdVaJa jSkEYu"
  >
    <span
      style={
        Object {
          "color": "#59626a",
          "fontFamily": "\\"Open Sans\\", sans-serif",
          "fontSize": "1.25rem",
          "fontWeight": 600,
        }
      }
    >
      <span
        className="sc-bwzfXH inMSfv"
      >
        Weekly Sync Report
      </span>
    </span>
    <span
      style={
        Object {
          "color": "#59626a",
          "fontFamily": "\\"Open Sans\\", sans-serif",
          "fontSize": "1rem",
          "fontWeight": 400,
        }
      }
    >
      <span
        className="sc-htpNat fkvbHj"
      >
        October 11, 2017
      </span>
    </span>
  </li>
</span>
`;

exports[`Snapshots ReportList loading state 1`] = `
<span>
  <span
    style={
      Object {
        "color": "#59626a",
        "fontFamily": "\\"Open Sans\\", sans-serif",
        "fontSize": "1rem",
        "fontWeight": 400,
      }
    }
  >
    Loading...
  </span>
</span>
`;

exports[`Snapshots ReportList renders the reports collection in a list 1`] = `
<span>
  <ol
    className="sc-bxivhb hEnmgW"
  >
    <li
      className="sc-bdVaJa jSkEYu"
    >
      <span
        style={
          Object {
            "color": "#59626a",
            "fontFamily": "\\"Open Sans\\", sans-serif",
            "fontSize": "1.25rem",
            "fontWeight": 600,
          }
        }
      >
        <span
          className="sc-bwzfXH inMSfv"
        >
          Weekly Sync Report
        </span>
      </span>
      <span
        style={
          Object {
            "color": "#59626a",
            "fontFamily": "\\"Open Sans\\", sans-serif",
            "fontSize": "1rem",
            "fontWeight": 400,
          }
        }
      >
        <span
          className="sc-htpNat fkvbHj"
        >
          November 8, 2017
        </span>
      </span>
    </li>
    <li
      className="sc-bdVaJa jSkEYu"
    >
      <span
        style={
          Object {
            "color": "#59626a",
            "fontFamily": "\\"Open Sans\\", sans-serif",
            "fontSize": "1.25rem",
            "fontWeight": 600,
          }
        }
      >
        <span
          className="sc-bwzfXH inMSfv"
        >
          Client Social Media Campaign
        </span>
      </span>
      <span
        style={
          Object {
            "color": "#59626a",
            "fontFamily": "\\"Open Sans\\", sans-serif",
            "fontSize": "1rem",
            "fontWeight": 400,
          }
        }
      >
        <span
          className="sc-htpNat fkvbHj"
        >
          October 11, 2017
        </span>
      </span>
    </li>
  </ol>
</span>
`;
